--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body{
   padding: 0 50px;
   color: #5a6567;
   border: solid 4px #faf4dc;
-  margin-top: 145px;
+  margin-top: 15vh;
 }
 .quotes p, .quotes h3{
   font-size: 2rem;
