--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body{
 }
 .quotes{
   background-color: #b1d3f8;
-  height: 450px;
+  height: 70vh;
   width: 900px;
   display: flex;
   flex-direction: column;
@@ -23,9 +23,4 @@ body{
 }
 .quotes p, .quotes h3{
   font-size: 2rem;
-}
-@media(max-width:375px){
-  .quotes{
-    height: 400px;
-  }
 }
