--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body{
 }
 .quotes{
   background-color: #b1d3f8;
-  height: 70vh;
+  height: 450px;
   width: 900px;
   display: flex;
   flex-direction: column;
@@ -23,4 +23,13 @@ body{
 }
 .quotes p, .quotes h3{
   font-size: 2rem;
+}
+@media(max-width:375px){
+  .quotes{
+    height: 65vh;
+    margin-top: 10vh;
+  }
+  .quotes p, .quotes h3{
+  font-size: 1.5rem;
+}
 }
